[gd_scene load_steps=8 format=3 uid="uid://8ftua65roldy"]

[ext_resource type="Script" path="res://assets/world/blocks/hit_blocks/hit_block.gd" id="1_0vgj8"]
[ext_resource type="Texture2D" uid="uid://b1wavil2t0gf5" path="res://assets/images/tiles_packed.png" id="1_ia0qe"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_h8h48"]
polygon = PackedVector2Array(-9, -18, 9, -18, 9, 0, -9, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_22dbf"]
size = Vector2(18, 18)

[sub_resource type="Animation" id="Animation_32ky0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnabledSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpawnNode2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DisabledSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -9)]
}

[sub_resource type="Animation" id="Animation_dabip"]
resource_name = "hit"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnabledSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(0, -9), Vector2(0, -14), Vector2(0, -9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpawnNode2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -9), Vector2(0, -18)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DisabledSprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -9), Vector2(0, -14), Vector2(0, -9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6j8gi"]
_data = {
"RESET": SubResource("Animation_32ky0"),
"hit": SubResource("Animation_dabip")
}

[node name="HitBlock" type="StaticBody2D" groups=["HitBlocks"]]
collision_mask = 3
script = ExtResource("1_0vgj8")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_h8h48")

[node name="DisabledSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("1_ia0qe")
region_enabled = true
region_rect = Rect2(162, 18, 18, 18)

[node name="EnabledSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9)
texture = ExtResource("1_ia0qe")
region_enabled = true
region_rect = Rect2(162, 0, 18, 18)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_22dbf")

[node name="SpawnNode2D" type="Node2D" parent="."]
position = Vector2(0, -9)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6j8gi")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
